--- a/index.html
+++ b/index.html
@@ -6,10 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MomenTuM</title>
     <link rel="stylesheet" href="css/style.css">
-    <script defer src="script.js"></script>
+    <script defer src="js/greetings.js"></script>
+    <script defer src="js/clock.js"></script>
+    <script defer src="js/quotes.js"></script>
 </head>
 <body>
-    <form id="login-form">
+    <form class="hidden" id="login-form">
         <input 
         required 
         maxlength="15" 
@@ -18,5 +20,10 @@
         <input type="submit" value="Log In">
     </form>
     <h1 id="greeting" class="hidden"></h1>
+    <h2 id="clock">00:00:00</h2>
+    <div id="quote">
+        <span></span>
+        <span></span>
+    </div>
 </body>
 </html>
