--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <script defer src="js/greetings.js"></script>
     <script defer src="js/clock.js"></script>
     <script defer src="js/quotes.js"></script>
+    <script defer src="js/background.js"></script>
+    <script defer src="js/todo.js"></script>
 </head>
 <body>
     <form class="hidden" id="login-form">
@@ -19,8 +21,16 @@
         placeholder="What is your name?"/>
         <input type="submit" value="Log In">
     </form>
+
     <h1 id="greeting" class="hidden"></h1>
+
+    <form id="todo-form">
+        <input type="text" placeholder="Write a To Do and Press Enter">
+    </form>
+    <ul id="todo-list"></ul>
+
     <h2 id="clock">00:00:00</h2>
+
     <div id="quote">
         <span></span>
         <span></span>
