--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@
     <form id="todo-form">
         <input type="text" placeholder="Write a To Do and Press Enter">
     </form>
-    <ul id="todo-list"></ul>
+    <ul id="todo-list">
+    </ul>
 
     <h2 id="clock">00:00:00</h2>
 
