--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <script defer src="js/quotes.js"></script>
     <script defer src="js/background.js"></script>
     <script defer src="js/todo.js"></script>
+    <script defer src="js/weather.js"></script>
 </head>
 <body>
     <form class="hidden" id="login-form">
