--- a/index.html
+++ b/index.html
@@ -37,5 +37,10 @@
         <span></span>
         <span></span>
     </div>
+    <div id="weather">
+        <span></span>
+        <span></span>
+        <span></span>
+    </div>
 </body>
 </html>
