--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MomenTuM</title>
+    <title>EntropY</title>
     <link rel="stylesheet" href="css/style.css">
+    
     <script defer src="js/greetings.js"></script>
     <script defer src="js/clock.js"></script>
     <script defer src="js/quotes.js"></script>
@@ -22,8 +23,9 @@
         placeholder="What is your name?"/>
         <input type="submit" value="Log In">
     </form>
-
     <h1 id="greeting" class="hidden"></h1>
+
+    <h2 id="clock">00:00:00</h2>
 
     <form id="todo-form">
         <input type="text" placeholder="Write a To Do and Press Enter">
@@ -31,14 +33,13 @@
     <ul id="todo-list">
     </ul>
 
-    <h2 id="clock">00:00:00</h2>
-
-    <div id="quote">
-        <span></span>
+    <div id="weather">
+        <span></span> <br>
+        <span></span>°C <br>
         <span></span>
     </div>
-    <div id="weather">
-        <span></span>
+
+    <div id="quote">
         <span></span>
         <span></span>
     </div>
