--- a/index.html
+++ b/index.html
@@ -21,27 +21,30 @@
         maxlength="15" 
         type="text" 
         placeholder="What is your name?"/>
-        <input type="submit" value="Log In">
+
+        <input type="submit" value="ON">
     </form>
     <h1 id="greeting" class="hidden"></h1>
 
-    <h2 id="clock">00:00:00</h2>
+    <div class="inner">
+        <h2 id="clock">00:00:00</h2>
 
-    <form id="todo-form">
-        <input type="text" placeholder="Write a To Do and Press Enter">
-    </form>
-    <ul id="todo-list">
-    </ul>
-
-    <div id="weather">
-        <span></span> <br>
-        <span></span>°C <br>
-        <span></span>
-    </div>
-
-    <div id="quote">
-        <span></span>
-        <span></span>
+        <form id="todo-form">
+            <input type="text" placeholder="Write a To Do and Press Enter">
+        </form>
+        <ul id="todo-list">
+        </ul>
+    
+        <div id="weather">
+            <span></span> &
+            <span></span>°C <br>
+            <span></span>
+        </div>
+    
+        <div id="quote">
+            <span></span>
+            <span></span>
+        </div>
     </div>
 </body>
 </html>
