--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>EntropY</title>
     <link rel="stylesheet" href="css/style.css">
-    
+    <link rel="icon" href="img/favicon.ico" />
     <script defer src="js/greetings.js"></script>
     <script defer src="js/clock.js"></script>
     <script defer src="js/quotes.js"></script>
